--- a/ui.html
+++ b/ui.html
@@ -40,10 +40,14 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=oJqkbfwo&__jvst=Employee+Referral&__jvsd=s2yligwY&__jvsc=Twitter&bid=nmTEmMww'>Jobvite, Inc. Careers - UI Developer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-28</p>
+<hr/>
 <h5><a href='https://dribbble.com/jobs/24958-Designer-VUI-UX?source=twitter'>
       Designer VUI/UX at New York Public Radio - Anywhere - Dribbble Design Jobs
   </a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">New York</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
 <h5><a href='https://recruit.apo.ucla.edu/JPF05079'>Postdoctoral Scholar in Ovarian Cancers - UCLA G.O. Discovery Laboratory (JPF05079) - UCLA Academic RECRUIT</a></h5> 
@@ -106,7 +110,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://producthire.net/job/internship-ui-ux-design-digital-mobility/'>Internship UI/UX Design - Digital Mobility | PRODUCTHIRE.NET</a></h5> 
+<h5><a href='https://producthire.net/job/internship-ui-ux-design-digital-mobility/'>Internship UI/UX Design - Digital Mobility | PRODUCTHIRE.NET</a></h5> 
 <p><span class="badge badge-light">Hong Kong Hong Kong</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -155,7 +159,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light">Waterloo, Wisconsin</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://dribbble.com/jobs/24890-Product-designer-UX-UI?source=feed'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dribbble.com/jobs/24890-Product-designer-UX-UI?source=feed'>
       Product designer (UX/UI) at Beeline - London, UK - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light">London</span></p>
@@ -205,7 +209,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light">Santiago</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://www.domestika.org/es/jobs/74757-ui-visual-designer-sevilla-espana'>UI / Visual Designer - Emergya Ingenier?a - Sevilla, Espa?a (21/10/19) | Domestika</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.domestika.org/es/jobs/74757-ui-visual-designer-sevilla-espana'>UI / Visual Designer - Emergya Ingenier?a - Sevilla, Espa?a (21/10/19) | Domestika</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -245,7 +249,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mitre.referrals.selectminds.com/jobs/ui-ux-agile-design-engineer-7157'>UI / UX Agile Design Engineer - MITRE Careers</a></h5> 
+<h5><a href='https://mitre.referrals.selectminds.com/jobs/ui-ux-agile-design-engineer-7157'>UI / UX Agile Design Engineer - MITRE Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -255,7 +259,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light">Krak?w Krak?w</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/jbs/job/ofRqbfwr'> JBS USA Careers - EMPLOYMENT RECRUITER</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/jbs/job/ofRqbfwr'> JBS USA Careers - EMPLOYMENT RECRUITER</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -309,11 +313,11 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.greatinsurancejobs.com/job/6406771/ui-developer/?TrackID=97736'>UI Developer job with Travelers Insurance | 6406771</a></h5> 
+<h5><a href='https://www.greatinsurancejobs.com/job/6406771/ui-developer/?TrackID=97736'>UI Developer job with Travelers Insurance | 6406771</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Tradelab/743999698217669-talent-acquisition-manager-m-w-'>Tradelab TALENT ACQUISITION MANAGER (M/W) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Tradelab/743999698217669-talent-acquisition-manager-m-w-'>Tradelab TALENT ACQUISITION MANAGER (M/W) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France  Paris Berlin Milan Madrid Sao Paulo</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -333,7 +337,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://uiowa.referrals.selectminds.com/jobs/clin-trials-rsrch-asst-data-mg-5588'>Clin Trials Rsrch Asst/Data Mg - Jobs@UIOWA Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/clin-trials-rsrch-asst-data-mg-5588'>Clin Trials Rsrch Asst/Data Mg - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -429,7 +433,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
-<h5><a href='https://sprinthub-mobile.breezy.hr/p/f5fcea30cdc5-ui-ux-designer'>UI/UX Designer at Sprinthub Mobile</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sprinthub-mobile.breezy.hr/p/f5fcea30cdc5-ui-ux-designer'>UI/UX Designer at Sprinthub Mobile</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -441,7 +445,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/McDonaldsCanada/743999698213734-emploi-etudiant-equipier-temps-partiel-cuisine'>McDonald's Restaurants EMPLOI ?TUDIANT ?quipier temps partiel CUISINE | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/McDonaldsCanada/743999698213734-emploi-etudiant-equipier-temps-partiel-cuisine'>McDonald's Restaurants EMPLOI ?TUDIANT ?quipier temps partiel CUISINE | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -458,10 +462,6 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p>Posted on: 2019-10-26</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/McDonaldsCanada/743999698213192-4h30-a-13h-lundi-au-vendredi-equipier-a-temps-plein-cuisine'>McDonald's Restaurants 4H30 ? 13H LUNDI AU VENDREDI ?quipier ? temps plein CUISINE | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Canada</span></p>
-<p>Posted on: 2019-10-26</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/McDonaldsCanada/743999698213659-23h-a-7h-vendredi-et-samedi-equipier-a-temps-partiel-cuisine'>McDonald's Restaurants 23H ? 7H VENDREDI ET SAMEDI ?quipier ? temps partiel CUISINE | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
